<resources>
    <string name="app_name">E-stok Root Silver</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_short_password">Senha muito curta</string>
    <string name="error_invalid_password">Senha invalida</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="action_settings">Configurações de conta</string>
    <string name="action_logout">Sair</string>
    <string name="title_activity_settings">Configurações de conta</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Nome</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_display_username">Nome de usuáro</string>
    <string name="pref_title_display_email">E-mail</string>
    <string name="pref_title_display_password">Password</string>
    <string name="pref_title_display_cpf">CPF</string>
    <string name="dialog_action_yes">Sim</string>
    <string name="dialog_action_no">Não</string>
    <string name="adicionar_cliente"><b><u>+ Adicionar cliente</u></b></string>

    <string-array name="array_states">
        <item>Selecione um estado…</item> <!-- Valor default -->
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>Sergipe</item>
        <item>São Paulo</item>
        <item>Tocantins</item>
    </string-array>

    <string-array name="cities">
        <item>Escolha uma cidade...</item>
        <item>Cidade 1</item>
        <item>Cidade 2</item>
        <item>Cidade 4</item>
        <item>Cidade 5</item>
        <item>Cidade 6</item>
    </string-array>

    <string-array name="test_user_emails">
        <item>Selecione um e-mail</item> <!-- Valor default -->
        <item>adm@rootsilver.com.br</item>
        <item>abarbieri.it@gmail.com</item>
        <item>jbsneto18@gmail.com</item>
        <item>giovanne.almeida91@gmail.com</item>
    </string-array>
</resources>
