<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="pref_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="pref_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_username" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textEmailAddress"
        android:key="pref_email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_email" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="number"
        android:key="pref_cpf"
        android:maxLines="1"
        android:maxLength="11"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_cpf" />

</PreferenceScreen>
